--- a/index.html
+++ b/index.html
@@ -216,10 +216,10 @@
           Contact Info
         </h1>
         <ul>
-          <li><i class="fa fa-globe"></i> johndoe.gtld</li>
-          <li><i class="fa fa-linkedin"></i> linkedin.com/in/john</li>
-          <li><i class="fa fa-envelope"></i> me@johndoe.gtld</li>
-          <li><i class="fa fa-phone"></i> 800.000.0000</li>
+          <li><i class="fa fa-globe"></i> shankhadmh.github.io/resume</li>
+          <li><i class="fa fa-linkedin"></i> linkedin.com/in/shankha-techgeek</li>
+          <li><i class="fa fa-envelope"></i> p16shankhadipm@iima.ac.in</li>
+          <li><i class="fa fa-phone"></i> (+91) 832.093.4388</li>
         </ul>
       </div>
       <div class="side-block" id="skills">
