--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         </section>
         <section class="blocks">
           <div class="date">
-            <span>2005</span><span>2009</span>
+            <span>2012</span><span>2016</span>
           </div>
           <div class="decorator">
           </div>
@@ -223,7 +223,7 @@
           Contact Info
         </h1>
         <ul>
-          <li><i class="fa fa-globe"></i>    shankhamj.github.io/resume</li>
+          <li><i class="fa fa-globe"></i><a href ="https://shankhamj.github.io/resume/">shankhamj.github.io/resume</a></li>
           <li><i class="fa fa-linkedin"></i> <a href = "https://www.linkedin.com/in/shankhadip/">     linkedin.com/in/shankhadip/</a></li>
           <li><i class="fa fa-envelope"></i>  p16shankhadipm@iima.ac.in</li>
           <li><i class="fa fa-phone"></i>   (+91) 832.093.4388</li>
