--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
           <li><i class="fa fa-linkedin"></i> <a href = "https://www.linkedin.com/in/shankhadip/">  linkedin.com/in/shankhadip/</a></li>
           <li><i class="fa fa-envelope"></i>  p16shankhadipm@iima.ac.in</li>
           <li><i class="fa fa-phone"></i>   (+91) 832.093.4388</li>
-          <li><i class="fa fa-twitter"></i> @majjubizman</li>
+          <li><i class="fa fa-twitter"></i> @shankhamj</li>
         </ul>
       </div>
       <div class="side-block" id="skills">
