made grammatical changes

--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
             </header>
             <div>
               <ul>
-                <li>Awarded quarterly perfomance awards and exceptional rating (top 5 pc) in first full year</li>
+                <li>Awarded quarterly performance awards and exceptional rating (top 5 pc) in first full year</li>
                 <li>Conceived, architected and oversaw the building of internal products used by thousands of business users </li>
                 <li>Part of the strategy team conducting data backed analyses for executive level decision making</li>
                 <li>Gained exposure to senior stakeholder management, user interviews, B2B product management and enterprise sales processes</li>
-                <li>Hard technical experience in BI tools such as Power BI, Tableau and big data tools such as MapReduce</li>
+                <li>Relevant technical experience in BI tools such as Power BI, Tableau and big data tools such as MapReduce</li>
                 
 
 
@@ -60,8 +60,8 @@
             </header>
             <div>
               <ul>
-                <li> Product manager for the core company products, a B2B ecommerce app aimed at bus owners across India  and a B2C ecommerce app aimed at travellers </li>
-                <li>Curated product features, finalized wireframes and schematics for tech products, based off of ground level user studies</li>
+                <li> Product manager for the core company products, a B2B eCommerce app aimed at bus owners across India, and a B2C eCommerce app aimed at travelers </li>
+                <li>Curated product features, finalized wireframes and schematics based on ground-level user studies</li>
      
                 <li>Developed sales tactics and customer engagement strategies based off of market intelligence and
                   desktop research, generated significant traction and pre-orders </li>
