--- a/index.html
+++ b/index.html
@@ -22,6 +22,26 @@
         </h2>
         <section class="blocks">
           <div class="date">
+            <span>2022 '01</span><span>present</span>
+          </div>
+          <div class="decorator">
+          </div>
+          <div class="details">
+            <header>
+              <h3>Digital Product Manager</h3>
+              <span class="place">Gartner Inc.</span>
+              <span class="location">Gurgaon IN/ Remote</span>
+            </header>
+            <div>
+              <ul>
+                <li>Building internal and external SaaS tools for Gartner's workforce and clients</li>
+
+              </ul>
+            </div>
+          </div>
+        </section>
+        <section class="blocks">
+          <div class="date">
             <span>2019 '05</span><span>present</span>
           </div>
           <div class="decorator">
