--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </section>
         <section class="blocks">
           <div class="date">
-            <span>2019 '05</span><span>present</span>
+            <span>2019 '05</span><span>2021 '12</span>
           </div>
           <div class="decorator">
           </div>
