--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <section id="main">
       <header id="title">
         <h1>SHANKHADIP MAJUMDER</h1>
-        <span class="subtitle">Product Manager, data driven &amp; skilled in analytics, strong background in Tech</span>
+        <span class="subtitle">Product Manager, data driven with a keen interest in Finance, strong Tech background</span>
       </header>
       <section class="main-block">
         <h2>
@@ -22,7 +22,7 @@
         </h2>
         <section class="blocks">
           <div class="date">
-            <span>2022 '01</span><span>present</span>
+            <span>2020 '06</span><span>present</span>
           </div>
           <div class="decorator">
           </div>
@@ -34,7 +34,11 @@
             </header>
             <div>
               <ul>
-                <li>Building internal and external SaaS tools for Gartner's workforce and clients</li>
+                <li>Primary product manager for internal SaaS tool used by 5000+ Gartner Service Associates worldwide</li>
+                <li>Conceived,validated and implemented multiple feature enhancements based on user inputs and usage analytics </li>
+                <li>Built custom dashboard in Python with live metrics to track app usage </li>
+                <li>Drove usage and adoption with internal marketing campaigns </li>
+                <li>Streamlined app architecture and design to lower latency by facilitating collaboration among multiple teams</li>
 
               </ul>
             </div>
@@ -42,7 +46,7 @@
         </section>
         <section class="blocks">
           <div class="date">
-            <span>2019 '05</span><span>2021 '12</span>
+            <span>2019 '05</span><span>2020 '05</span>
           </div>
           <div class="decorator">
           </div>
@@ -204,7 +208,7 @@
           <div class="details">
             <header>
               <h3>B.Tech in Computer Science (BS equivalent)</h3>
-              <span class="place">IIIT K</span>
+              <span class="place">IIIT K (WBUT)</span>
               <span class="location">Kolkata, WB</span>
             </header>
             <div>
