changing in for schooling

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
           </div>
           <div class="details">
             <header>
-              <h3>MS in Computer Science</h3>
+              <h3>MS,Computer Science</h3>
               <span class="place">Georgia Tech</span>
               <span class="location">Atlanta, GA</span>
             </header>
@@ -207,7 +207,7 @@
           </div>
           <div class="details">
             <header>
-              <h3>B.Tech in Computer Science (BS equivalent)</h3>
+              <h3>B.Tech,Computer Science (BS equivalent)</h3>
               <span class="place">IIIT K</span>
               <span class="location">Kolkata, WB</span>
             </header>
