first commit into tpm

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <section id="main">
       <header id="title">
         <h1>SHANKHADIP MAJUMDER</h1>
-        <span class="subtitle">Product Manager,data driven with experience in analytics, strong tech background</span>
+        <span class="subtitle">Technical PM,Experienced in PaaS,Web and Mobile Technologies</span>
       </header>
       <section class="main-block">
         <h2>
