--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <li>Implemented multiple feature enhancements based on user inputs and usage analytics that increased user adoption by a factor of 3 </li>
                 <li>Conceived,designed and built a live dashboard with a suite of product metrics used by 500+ business and product leaders </li>
                 <li>Streamlined CI/CD pipelines, app architecture by facilitating cooperation amongst multiple teams resulting in 5x lower load times and 20x faster data refresh cycles</li>
-
+                <li> Additional developer advocate responsibilities for company APIs that provide information on technology trends </li>
               </ul>
             </div>
           </div>
@@ -239,7 +239,6 @@
                 <li>Web Design Fundamentals</li>
                 <li>Digital Marketing</li>
                 <li>AWS DevOps</li>
-                <li>Advanced Product Management</li>
 
               </ul>
             </div>
